prevent jumping scrollbar issue

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -52,6 +52,7 @@ html {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     -webkit-text-size-adjust: 100%;
+		 margin-left: calc(100vw - 100%);
 }
 
 
